--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
