--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "start": "concurrently \"npm run react\" \"npm run api\"",
+        "react": "vite",
+        "api": "cd src/api && npm start"
     },
     "dependencies": {
         "init": "^0.1.2",
@@ -25,6 +24,7 @@
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.14",
+        "concurrently": "^8.2.0",
         "eslint": "^8.45.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
